--- a/application/index/view/index/login.html
+++ b/application/index/view/index/login.html
@@ -45,7 +45,7 @@
                            icon:6,
                            time:2000
                        }, function () {
-                           history.go(-1);
+                           location.href = data.url;
                        });
                    }else {
                        layer.open({
