--- a/application/index/view/article/article.html
+++ b/application/index/view/article/article.html
@@ -19,12 +19,13 @@
                 <div class="page-header"><b>相关评论</b></div>
                 <div class="comment-content">
                     <form action="#">
-                        <input type="hidden" name="articleid" value="{$articleInfo.id}">
+                        <input type="hidden" name="article_id" value="{$articleInfo.id}">
+                        <input type="hidden" name="member_id" value="{:session('index.id')}">
                         <div class="form-group">
-                            <textarea class="form-control" id="comment" name="comment" rows="5" cols="" style="resize: none"></textarea>
+                            <textarea class="form-control" id="comment" name="content" rows="5" cols="" style="resize: none"></textarea>
                         </div>
                         <div class="form-group pull-right">
-                            <button class="btn btn-primary" id="comments">评论（请认真评论）</button>
+                            <button class="btn btn-primary" id="memberComm">评论（请认真评论）</button>
                         </div>
                     </form>
                 </div>
@@ -55,11 +56,11 @@
 </div>
 {include file="public/_foot" /}
 <script>
-    $(function () {
-        $('#comments').click(function () {
+     $(function () {
+        $('#memberComm').click(function () {
             if ("{:session('?index.id')}") {
                 $.ajax({
-                    url:"{:url('index/article/articlecomment')}",
+                    url:"{:url('index/article/comm')}",
                     type:'post',
                     data:$('form').serialize(),
                     dataType:'json',
