--- a/application/index/view/public/_foot.html
+++ b/application/index/view/public/_foot.html
@@ -1,5 +1,5 @@
 <div class="footer">
-    <p>Copyright 2021 <a href="#">www.tp5blog.com</a> All Rights Reserved</p>
+    <p>Copyright 2021 <a href="#">{$webInfo.copyright}</a> All Rights Reserved</p>
 </div>
 
 <script src="/static/index/js/jquery-3.3.1.min.js"></script>
@@ -37,17 +37,30 @@
                     url:"{:url('index/index/loginout')}",
                     type:'post',
                     dataType:'json',
-                    success:function () {
+                    success:function (data) {
                         layer.msg('退出成功！', {
                             icon:6,
                             time:2000
                         }, function () {
-                            location.href = location.href;
+                            location.href = data.url;
                         });
                     }
                 });
             }); 
             return false;
         });
+
+        $('#btn-search').click(function(){
+          var username = $("#search").val();  //获取元素的值
+          if(username==""){     //判断值是否为空
+             layer.open({
+                        title:'搜索',
+                        content:'请输入内容！',
+                        icon:5,
+                        anim:6
+                      }); //提示信息
+             event.preventDefault();  //阻止默认行为 ( 表单提交 )或者return false;
+          }
+        })
     });
 </script>
